<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp" >

        <TextView
            android:id="@+id/tvTimeDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvItemDB"
            android:layout_below="@+id/tvItemDB"
            android:text="@string/small_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imgDB"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="15sp"
            android:background="@drawable/border"
            android:text="@string/stt"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp"
            android:color="#FFFFFF" />

        <ImageView
            android:id="@+id/imgDB"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/old_mail" />

        <TextView
            android:id="@+id/tvItemDB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="7dp"
            android:layout_toRightOf="@+id/tvID"
            android:text="@string/large_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="17sp" />
    </RelativeLayout>

</RelativeLayout>