<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ad_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:weightSum="3" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="10sp"
                android:src="@drawable/icon" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0sp" >

                <RadioGroup
                    android:id="@+id/rbGroupState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/rbNewer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newer_state"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rbLimit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/limit_state"
                        android:textStyle="bold" />
                </RadioGroup>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <AbsoluteLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:weightSum="5" >

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_weight="1" >

                        <Button
                            android:id="@+id/btnSetting"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/notification_accept_rule"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_weight="1" >

<!--                         <Button -->
<!--                             android:id="@+id/btnNotify" -->
<!--                             android:layout_width="match_parent" -->
<!--                             android:layout_height="wrap_content" -->
<!--                             android:layout_alignLeft="@+id/btnShowListLog" -->
<!--                             android:text="NOTIFICATION" -->
<!--                             android:textStyle="bold" /> -->
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_weight="1" >

                        <Button
                            android:id="@+id/btnShowListLog"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/action_settings"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_weight="1" >

                        <Button
                            android:id="@+id/btnShowIgnoreList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_ignore_list"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_weight="1" >

                        <Button
                            android:id="@+id/btnExit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/exit"
                            android:textStyle="bold" />
                    </TableRow>
                </TableLayout>
            </AbsoluteLayout>
        </TableRow>
    </TableLayout>

</RelativeLayout>